# whatbpm

./: .gitignore  Cargo.toml  README.md  WELCOME.md  browserconfig.xml  index.html  latest.json  site.webmanifest
.github/: FUNDING.yml
.github/workflows/: crate_publish.yml  website_build_deploy.yml
css/: style.css
history/: 2022-11-15.json  2022-11-16.json  2022-11-17.json  2022-11-18.json  2022-11-19.json  2022-11-20.json  2022-11-21.json  2022-11-22.json  2022-11-23.json  2022-11-24.json  2022-11-25.json  2022-11-26.json  2022-11-27.json  2022-11-28.json  2022-11-29.json  2022-11-30.json  2022-12-01.json  2022-12-02.json  2022-12-03.json  2022-12-04.json  2022-12-05.json  2022-12-06.json  2022-12-07.json  2022-12-08.json  2022-12-09.json  2022-12-10.json  2022-12-11.json  2022-12-12.json  2022-12-13.json  2022-12-14.json  2022-12-15.json  2022-12-16.json  2022-12-17.json  2022-12-18.json  2022-12-19.json  2022-12-20.json  2022-12-21.json  2022-12-22.json  2022-12-23.json  2022-12-24.json  (+199 more)
src/: camelot_traktor.rs  genre.rs  key.rs  main.rs  markdown.rs  question_factory.rs  score.rs  stats.rs  track.rs  view.rs  web.rs
templates/: body_article.html  body_first_article_dynamic.html  body_footer.html  body_header.html  body_main.html  body_nav.html  body_scripts.html  body_section_macros.html  head_favicon.html  head_links.html  head_meta.html  head_meta_og.html  head_meta_tc.html  index.html
